# VSCode-Remote-Workspace

./: CMakeLists.txt  README.md  run
include/: adapter.cpp  adapter.h  c_file.c  c_file.h
src/: CMakeLists.txt  main.c  main.cpp
